# pass2csv

./: .gitignore  .mailmap  LICENSE  README.md  dev-requirements.in  dev-requirements.txt  pass2csv  pass2csv.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
tests/: README.txt  alice.gpg  pass
tests/password-store/: .gpg-id  latin1.gpg  unicode.gpg
tests/password-store/sites/example/: login.gpg
