[metadata]
name = pass2csv
version = 1.0.0
author = Rupus Reinefjord
author_email = rupus@reinefjord.net
description = Export pass(1), "the standard unix password manager", to CSV
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reinefjord/pass2csv
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Utilities

[options]
scripts = pass2csv
python_requires = >= 3.6
install_requires = python-gnupg
